get web server and tensorflow running in a multithreaded environment

--- a/WebServer/index.html
+++ b/WebServer/index.html
@@ -17,6 +17,16 @@
     <body>
 
         <form method="post">
+
+            <input type="submit" id="start" name="start" value="Start Training" />
+
+            </br>
+
+            <input type="submit" id="stop" name="stop" value="Stop Training" />
+
+            </br>
+            </br>
+
             <input type="submit" id="power" name="power" value="Turn On" />
             </br>
             </br>
