switch to gather button

--- a/WebServer/index.html
+++ b/WebServer/index.html
@@ -18,11 +18,7 @@
 
         <form method="post">
 
-            <input type="submit" id="start" name="start" value="Start Training" />
-
-            </br>
-
-            <input type="submit" id="stop" name="stop" value="Stop Training" />
+            <input type="submit" id="gathering" name="gathering" value="Start Training" />
 
             </br>
             </br>
