changed UI layout

--- a/WebServer/index.html
+++ b/WebServer/index.html
@@ -17,18 +17,18 @@
     <body>
 
         <form method="post">
-
-            <input type="submit" id="gathering" name="gathering" value="Start Training" />
-
             </br>
-            </br>
-
             <input type="submit" id="power" name="power" value="Turn On" />
-            </br>
             </br>
             <input type="submit" id="cooler" name="cooler" value="Cooler" />
             <div id=target style="display:inline;">75</div>
             <input type="submit" id="warmer" name="warmer" value="Warmer" />
+            </br>
+            </br>
+            <input type="submit" id="gathering" name="gathering" value="Start Gathering" />
+            </br>
+            <input type="submit" id="training" name="training" value="Start Training" />
+            </br>
         </form>
 
         <div id=message></div>
