--- a/Client.html
+++ b/Client.html
@@ -27,6 +27,8 @@
             </br>
             <input type="submit" id="gathering" name="gathering" value="Start Gathering" />
             </br>
+            <input type="submit" id="exploring" name="exploring" value="Start Exploring" />
+            </br>
             <input type="submit" id="training" name="training" value="Start Training" />
             </br>
         </form>
