enable training on server

--- a/Server.html
+++ b/Server.html
@@ -18,6 +18,8 @@
 
         <form method="post">
             <input type="submit" id="power" name="power" value="Turn On" />
+            <br>
+            <input type="submit" id="training" name="training" value="Training" />
         </form>
 
         <div id=message></div>
