add ability to vary exploration rate

--- a/Client.html
+++ b/Client.html
@@ -29,6 +29,10 @@
             </br>
             <input type="submit" id="exploring" name="exploring" value="Start Exploring" />
             </br>
+            <input type="submit" id="less_exploring" name="less_exploring" value="Less" />
+            <div id=exploration_rate style="display:inline;">75</div>
+            <input type="submit" id="more_exploring" name="more_exploring" value="More" />
+            </br>
             <input type="submit" id="training" name="training" value="Start Training" />
             </br>
         </form>
