--- a/Client.html
+++ b/Client.html
@@ -20,20 +20,9 @@
             </br>
             <input type="submit" id="power" name="power" value="Turn On" />
             </br>
-            <input type="submit" id="cooler" name="cooler" value="Cooler" />
-            <div id=target style="display:inline;">75</div>
-            <input type="submit" id="warmer" name="warmer" value="Warmer" />
-            </br>
-            </br>
-            <input type="submit" id="gathering" name="gathering" value="Start Gathering" />
-            </br>
-            <input type="submit" id="exploring" name="exploring" value="Start Exploring" />
-            </br>
-            <input type="submit" id="less_exploring" name="less_exploring" value="Less" />
-            <div id=exploration_rate style="display:inline;">75</div>
-            <input type="submit" id="more_exploring" name="more_exploring" value="More" />
-            </br>
-            <input type="submit" id="training" name="training" value="Start Training" />
+            <input type="submit" id="less_collecting" name="less_collecting" value="Slower" />
+            <div id=collection_rate style="display:inline;">5.0s</div>
+            <input type="submit" id="more_collecting" name="more_collecting" value="Faster" />
             </br>
         </form>
 
